[package]
name = "efmt"
version = "0.10.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Erlang code formatter"
homepage = "https://github.com/sile/efmt"
repository = "https://github.com/sile/efmt"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
erl_tokenize = "0.5"
efmt_derive = { path = "efmt_derive", version = "0.1.0" }
env_logger = "0.9"
log = "0.4"
rayon = "1"
sha256 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = { version= "2", features = ["inline"] }
tempfile = "3"
thiserror = "1"
regex = "1.6.0"

[dev-dependencies]
indoc = "1"
similar-asserts = "1"

[workspace]
members = ["efmt_derive", "efmt_wasm"]
