[package]
name = "efmt"
version = "0.19.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Erlang code formatter"
homepage = "https://github.com/sile/efmt"
repository = "https://github.com/sile/efmt"
readme = "README.md"
exclude = ["/rebar3_efmt/", "efmt_wasm.wasm", "/vscode/"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
erl_tokenize = "0.9.0"
efmt_core = { path = "efmt_core", version = "0.5.0" }
env_logger = "0.11"
log = "0.4"
rayon = "1"
similar = { version= "2", features = ["inline"] }
regex = "1.6.0"
colored = "3"
ignore = "0.4.22"

[dev-dependencies]
similar-asserts = "1"

[workspace]
members = ["efmt_core", "efmt_derive", "efmt_wasm"]
