[package]
name = "efmt_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erl_tokenize = "0.5"
efmt_derive = { path = "../efmt_derive", version = "0.1.0" }
log = "0.4"
thiserror = "1"

[dev-dependencies]
indoc = "2"
similar-asserts = "1"
