[package]
name = "efmt_core"
version = "0.5.1"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Core library for efmt crate"
homepage = "https://github.com/sile/efmt"
repository = "https://github.com/sile/efmt"
readme = "README.md"

[dependencies]
erl_tokenize = "0.8.1"
efmt_derive = { path = "../efmt_derive", version = "0.1.0" }
log = "0.4"

[dev-dependencies]
indoc = "2"
similar-asserts = "1"
