[package]
name = "efmt_derive"
version = "0.0.2"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Internal proc macros for efmt crate"
homepage = "https://github.com/sile/efmt"
repository = "https://github.com/sile/efmt"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"